Remove examples, Personalize the pages

--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -4,20 +4,17 @@ icon: fa-th
 order: 2
 ---
 
-<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-  egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-  Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-  fusce hendrerit lacus ridiculus.</p>
+<p>Below are projects that I have worked on:</p>
 
   <div class="row">
     <div class="4u 12u$(mobile)">
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic02.jpg' | relative_url }}" alt="Ipsum Feugiat" /></a>
+        <a href="#" class="image fit"><img src="{{ 'assets/images/monsterbox.svg' | relative_url }}" alt="MonsterBox" /></a>
         <header>
-          <h3>Ipsum Feugiat</h3>
+          <h3>MonsterBox</h3>
         </header>
       </div>
-      <div class="item">
+      <!--<div class="item">
         <a href="#" class="image fit"><img src="{{ 'assets/images/pic03.jpg' | relative_url }}" alt="Rhoncus Semper" /></a>
         <header>
           <h3>Rhoncus Semper</h3>
@@ -50,6 +47,6 @@ order: 2
         <header>
           <h3>Orci Convallis</h3>
         </header>
-      </div>
+      </div>-->
     </div>
   </div>
