Add Twitter feed, Update about me

--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -9,7 +9,7 @@ order: 2
   <div class="row">
     <div class="4u 12u$(mobile)">
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/monsterbox.svg' | relative_url }}" alt="MonsterBox" /></a>
+        <a href="https://jamesblack3.github.io/monstergen5e/" class="image fit"><img src="{{ 'assets/images/monsterbox.svg' | relative_url }}" alt="MonsterBox" /></a>
         <header>
           <h3>MonsterBox</h3>
         </header>
