--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -7,4 +7,6 @@ order: 3
 <a href="#" class="image featured"><img src="assets/images/pic08.jpg" alt="" /></a>
 
 <p> I am currently a Computer Science major with a concentration in AI, robotics, and gaming
-    at UNC Charlotte in North Carolina. My anticipated graduation is Winter 2020.<br /></p>
+    at UNC Charlotte in North Carolina. My anticipated graduation is Winter 2020.<br />
+    When I work, I typically start with a simple start and finsh, then I iterate on it.<br />
+    I love to use kanban boards to organize my projects; most of my projects use them, typically Trello.</p>
