Remove twitter, add more projects, remove placeholder images

--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -9,13 +9,37 @@ order: 2
 <div class="row">
   <div class="4u 12u$(mobile)">
     <div class="item">
-      <a href="https://jamesblack3.github.io/monsterbox/" class="image fit"><img src="{{ 'assets/images/monsterbox.svg' | relative_url }}" alt="Monsterbox" /></a>
+      <a href="https://store.steampowered.com/app/1453000/ADRPAN/" class="image fit"><img src="{{ 'assets/images/adrpan.jpg' | relative_url }}" alt="ADRPAN" /></a>
       <header>
-        <h3>Monsterbox</h3>
+        <h3>ADRPAN on Steam</h3>
       </header>
     </div>
     <div class="item">
-      <iframe src="https://itch.io/embed/565452?border_width=0&amp;dark=true" width="550" height="165" frameborder="0"><a href="https://jblack144.itch.io/trpg">TRPG in the Artic by Singulo</a></iframe>
+      <iframe src="https://itch.io/embed/711345" width="552" height="167" frameborder="0"><a href="https://jamesblack3.itch.io/black-laser">Black Laser by Singulo</a></iframe>
+    </div>
+    <div class="item">
+      <a href="#" class="image fit"><img src="{{ 'assets/images/catering.png' | relative_url }}" alt="Catering" /></a>
+      <header>
+        <h3>Catering App on Windows</h3>
+      </header>
+    </div>
+    <div class="item">
+      <a href="#" class="image fit"><img src="{{ 'assets/images/getajob.png' | relative_url }}" alt="Task Management" /></a>
+      <header>
+        <h3>Task Management App on Android</h3>
+      </header>
+    </div>
+    <div class="item">
+      <a href="#" class="image fit"><img src="{{ 'assets/images/customization.png' | relative_url }}" alt="Product Customization" /></a>
+      <header>
+        <h3>Product Customization for eCommerce</h3>
+      </header>
+    </div>
+    <div class="item">
+      <a href="#" class="image fit"><img src="{{ 'assets/images/alchemyshop.png' | relative_url }}" alt="Alchemy Shop" /></a>
+      <header>
+        <h3>Alchemy Shop</h3>
+      </header>
     </div>
   </div>
   <!--<div class="4u 12u$(mobile)">
