Fix about me, remove alchemy shop, potentially fix portfolio layout?

--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -7,6 +7,7 @@ order: 3
 <a href="#" class="image featured"><img src="assets/images/pic08.jpg" alt="" /></a>
 
 <p> I am currently a Computer Science major with a concentration in AI, robotics, and gaming
-    at UNC Charlotte in North Carolina. My anticipated graduation is Winter 2020.<br />
-    When I work, I typically start with a simple start and finsh, then I iterate on it.<br />
-    I love to use kanban boards to organize my projects; most of my projects use them, typically Trello.</p>
+    at UNC Charlotte in North Carolina. My anticipated graduation is December 2020.<br />
+    I love to use kanban boards to organize my projects. I typically use Trello, but I have used Asana.</p>
+    I have a very thorough problem solving process. It is how I learn best. Ask me about it!<br />
+    
