--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -17,6 +17,8 @@ order: 2
     <div class="item">
       <iframe src="https://itch.io/embed/711345" width="552" height="167" frameborder="0"><a href="https://jamesblack3.itch.io/black-laser">Black Laser by Singulo</a></iframe>
     </div>
+  </div>
+  <div class="4u 12u$(mobile)">
     <div class="item">
       <a href="#" class="image fit"><img src="{{ 'assets/images/catering.png' | relative_url }}" alt="Catering" /></a>
       <header>
@@ -29,16 +31,12 @@ order: 2
         <h3>Task Management App on Android</h3>
       </header>
     </div>
+  </div>
+  <div class="4u 12u$(mobile)">
     <div class="item">
       <a href="#" class="image fit"><img src="{{ 'assets/images/customization.png' | relative_url }}" alt="Product Customization" /></a>
       <header>
         <h3>Product Customization for eCommerce</h3>
-      </header>
-    </div>
-    <div class="item">
-      <a href="#" class="image fit"><img src="{{ 'assets/images/alchemyshop.png' | relative_url }}" alt="Alchemy Shop" /></a>
-      <header>
-        <h3>Alchemy Shop</h3>
       </header>
     </div>
   </div>
