Redo black laser
While the itch.io widget is cool, it doesn't work well with my website layout

--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -15,7 +15,7 @@ order: 2
       </header>
     </div>
     <div class="item">
-      <a href="#" class="image fit"><iframe src="https://itch.io/embed/711345" width="440" height="215" frameborder="0"><a href="https://jamesblack3.itch.io/black-laser">Black Laser by James and Kial</a></iframe></a>a>
+      <a href="https://jamesblack3.itch.io/black-laser" class="image fit"><img src="{{ 'assets/images/blacklaser.png' | relative_url }}" alt="ADRPAN" /></a>
       <header>
         <h3>Black Laser on itch.io</h3>
       </header>
