Fix black laser alt text typo, update about me

--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -8,6 +8,8 @@ order: 3
 
 <p> I am currently a Computer Science major with a concentration in AI, robotics, and gaming
     at UNC Charlotte in North Carolina. My anticipated graduation is December 2020.<br />
-    I love to use kanban boards to organize my projects. I typically use Trello, but I have used Asana.</p>
-    I have a very thorough problem solving process. It is how I learn best. Ask me about it!<br />
+    My passion is easy to read and bug free code that I can be proud of.<br />
+    I love to build modular systems that work well so that I don't have to redo code. <br />
+    I build video games in my free time as a creative outlet.
+</p>
     
