--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -15,7 +15,7 @@ order: 2
       </header>
     </div>
     <div class="item">
-      <a href="https://jamesblack3.itch.io/black-laser" class="image fit"><img src="{{ 'assets/images/blacklaser.png' | relative_url }}" alt="ADRPAN" /></a>
+      <a href="https://jamesblack3.itch.io/black-laser" class="image fit"><img src="{{ 'assets/images/blacklaser.png' | relative_url }}" alt="Black Laser" /></a>
       <header>
         <h3>Black Laser on itch.io</h3>
       </header>
