--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -8,7 +8,7 @@ order: 1
 ---
 <header>
   <h2 class="alt">Hi! I'm <strong>James</strong>!</h2>
-  <p>I make games, maps, mods, software, and more.</p>
+  <p>I make games, websites, apps, and more.</p>
 </header>
 
 <footer>
