--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -12,5 +12,5 @@ order: 1
 </header>
 
 <footer>
-  <a href="https://docs.google.com/document/d/1yKokcY_YU5kLaHxVjidr2PBDssp6YKTiS5OmTYIWb_c/edit?usp=sharing" class="button scrolly">My Resume</a>
+  <a href="https://drive.google.com/file/d/17rBPXs7tz1mYR3WWKJYV7ivbDFIVXS_-/view?usp=sharing" class="button scrolly">My Resume</a>
 </footer>
