Update about me, change task management app to album sharing, update getajob image

--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -6,10 +6,13 @@ order: 3
 
 <a href="#" class="image featured"><img src="assets/images/pic08.jpg" alt="" /></a>
 
-<p> I am currently a Computer Science major with a concentration in AI, robotics, and gaming
-    at UNC Charlotte in North Carolina. My anticipated graduation is December 2020.<br />
-    My passion is easy to read and bug free code that I can be proud of.
-    I love to build modular systems that work well so that I don't have to redo code.
-    I build video games in my free time as a creative outlet.
+<p> I recently graduated from UNCC with a BS in Computer Science.</br>
+I am seeking a new company to be my home where I can meet new a family of fellow geeks.</br>
+We can bond over video games, the great outdoors, or pets.</br>
+I am in this transitional period where I cannot decide whether or not I am a cat or dog person.</br>
+
+My coursework at UNCC focused on making applications, AI, websites, and video games.</br>
+I am open to making all kinds of software. I enjoy doing it, as it stimulates my need to solve problems.</br>
+I also love feedback on my performance, so that I can get better at what I do.
 </p>
     
