--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -43,9 +43,9 @@ order: 2
       </header>
     </div>
     <div class="item">
-      <a href="#" class="image fit"><img src="{{ 'assets/images/getajob.png' | relative_url }}" alt="Task Management" /></a>
+      <a href="#" class="image fit"><img src="{{ 'assets/images/getajob.png' | relative_url }}" alt="Album Sharing" /></a>
       <header>
-        <h3>Task Management App on Android</h3>
+        <h3>Album Sharing App on Android</h3>
       </header>
     </div>
   </div>
