Add tabletop games

--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -8,7 +8,7 @@ order: 3
 
 <p> I recently graduated from UNCC with a BS in Computer Science.</br>
 I am seeking a new company to be my home where I can meet new a family of fellow geeks.</br>
-We can bond over video games, the great outdoors, or pets.</br>
+We can bond over video games, tabletop games, the great outdoors, or pets.</br>
 I am in this transitional period where I cannot decide whether or not I am a cat or dog person.</br>
 
 My coursework at UNCC focused on making applications, AI, websites, and video games.</br>
