Add videos to living lake and metal

--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -23,15 +23,15 @@ order: 2
   </div>
   <div class="4u 12u$(mobile)">
     <div class="item">
-      <a href="#" class="image fit"><img src="{{ 'assets/images/monster.png' | relative_url }}" alt="Monster" /></a>
+      <a href="https://www.youtube.com/watch?v=WfWq1YOhzIU" class="image fit"><img src="{{ 'assets/images/monster.png' | relative_url }}" alt="Living Metal" /></a>
       <header>
-        <h3>Monster (WIP)</h3>
+        <h3>Living Metal</h3>
       </header>
     </div>
     <div class="item">
-      <a href="#" class="image fit"><img src="{{ 'assets/images/lake.png' | relative_url }}" alt="Lake" /></a>
+      <a href="https://www.youtube.com/watch?v=dWin-O_OAII" class="image fit"><img src="{{ 'assets/images/lake.png' | relative_url }}" alt="Living Lake" /></a>
       <header>
-        <h3>Lake (WIP)</h3>
+        <h3>Living Lake</h3>
       </header>
     </div>
   </div>
